# fresh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TESTS_STATUS.md  TODO.md  build.rs  default.nix  dist-workspace.toml  flake.nix  package.json
.github/workflows/: appimage-build.yml  aur-publish.yml  ci.yml  deploy-docs.yml  linux-packages.yml  npm-publish.yml  release.yml
crates/fresh-editor/: Cargo.toml
crates/fresh-editor/locales/: cs.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  pt-BR.json  ru.json  th.json  uk.json  vi.json  zh-CN.json
crates/fresh-editor/plugins/: README.md  config-schema.json
crates/fresh-editor/plugins/examples/: README.md
crates/fresh-editor/scripts/: build-appimage.sh
crates/fresh-editor/src/: config.rs  main.rs  partial_config.rs  state.rs
crates/fresh-editor/src/app/: async_messages.rs  buffer_management.rs  file_open.rs  file_open_input.rs  file_operations.rs  input.rs  lsp_actions.rs  lsp_requests.rs  menu_context.rs  mod.rs  mouse_input.rs  on_save_actions.rs  popup_actions.rs  prompt_actions.rs  render.rs  toggle_actions.rs  types.rs
crates/fresh-editor/src/input/: actions.rs  commands.rs  keybindings.rs
crates/fresh-editor/src/model/: buffer.rs  encoding.rs
crates/fresh-editor/src/server/ipc/: mod.rs
crates/fresh-editor/src/services/lsp/: async_handler.rs
crates/fresh-editor/src/services/terminal/: manager.rs  term.rs
crates/fresh-editor/src/view/: bracket_highlight_overlay.rs  file_browser_input.rs  mod.rs  popup.rs  prompt.rs
crates/fresh-editor/src/view/settings/: entry_dialog.rs  items.rs  render.rs  schema.rs  search.rs
crates/fresh-editor/src/view/ui/: split_rendering.rs  status_bar.rs  tabs.rs
crates/fresh-editor/tests/e2e/: buffer_lifecycle.rs  encoding.rs  file_browser.rs  large_file_mode.rs  lsp_completion_popup_behavior.rs  mod.rs  mouse.rs  multicursor.rs  on_save_actions.rs  save_as_language_detection.rs  search.rs  settings.rs  sort_lines.rs  tab_indent_selection.rs  terminal.rs  toggle_bars.rs
crates/fresh-editor/tests/e2e/plugins/: plugin.rs  theme_editor.rs
docs/: ANALYSIS_EXECUTIVE_SUMMARY.md  BUFFER_EFFICIENCY_ANALYSIS.md  CHUNKED_SEARCH_ANALYSIS.md  CONFIG_EDITOR_DESIGN.md  DOCUMENT_MODEL.md  EFFICIENCY_REVIEW_AND_NEXT_STEPS.md  FILE_EXPLORER.md  FIX_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LARGE_FILE_SUPPORT_ANALYSIS.md  LINE_NUMBER_ANALYSIS.md  OPTIMAL_API_DESIGN.md  PLUGINS_QUICKSTART.md  PROMPT_EDITING_SUGGESTIONS.md  QUICK_REFERENCE.md  ROADMAP.md  STATUS.md  TODO.md  VISUAL_LAYOUT_UNIFICATION.md  architecture.md  i18n.md  index.md  piece_tree.md  privacy.md  quickjs.md  troubleshooting.md  wasm.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/configuration/: index.md  keyboard.md
docs/features/: command-palette.md  editing.md  file-explorer.md  index.md  lsp.md  navigation.md  search-replace.md  ssh.md  terminal.md  themes.md
docs/getting-started/: index.md
docs/internal/: README.md  WARNING_NOTIFICATION_UX.md  bulk-edit-optimization.md  code-review.md  config-design.md  config-editor-design.md  config-implementation-plan.md  diff-view.md  event-dispatch-architecture.md  input-calibration-wizard.md  io-separation-plan.md  markdown.md  paste-handling.md  plugin-architecture-plan.md  plugin-marketplace-design.md  plugin-usability-review.md  scroll-sync-design.md  settings-modified-indicator-design.md  ssh-remote-editing-design.md  terminal.md  timesource-design.md  unicode-width.md  vi-mode-design.md  warning-notification-ux.md
docs/plugins/: index.md
docs/plugins/api/: buffer.md  (+6 more)
homepage/: index.html
keymaps/: default.json  emacs.json  vscode.json
locales/: cs.json  de.json  en.json  es.json  fr.json  ja.json  ko.json  pt-BR.json  ru.json  th.json  uk.json  zh-CN.json
plugins/: config-schema.json  diagnostics_panel.ts  find_references.ts  git-find-file.lua  git_find_file.ts  git_grep.ts  git_log.ts  live_grep.ts  theme_editor.i18n.json  theme_editor.ts  todo_highlighter.ts
plugins/lib/: finder.ts  fresh.d.ts  index.ts
scripts/: build-site.sh  bump-version.py  bump-version.sh
src/: actions.rs  async_bridge.rs  buffer.rs  chunk_tree.rs  commands.rs  config.rs  config_io.rs  document_model.rs  editor.rs  event.rs  event_hooks.rs  hooks.rs  i18n.rs  keybindings.rs  lib.rs  line_iterator.rs  lsp_async.rs  lsp_diagnostics.rs  lsp_manager.rs  main.rs  memstore.rs  overlay.rs  partial_config.rs  persistence.rs  plugin_api.rs  plugin_thread.rs  prompt.rs  session.rs  state.rs  text_buffer.rs  ts_runtime.rs  view.rs  viewport.rs  virtual_buffer.rs  virtual_file.rs
src/app/: async_messages.rs  buffer_management.rs  input.rs  input_dispatch.rs  lsp_requests.rs  menu_actions.rs  mod.rs  mouse_input.rs  plugin_commands.rs  prompt_actions.rs  render.rs  session.rs  settings_actions.rs  terminal.rs  types.rs
src/editor/: input.rs  mod.rs  render.rs
src/input/: actions.rs  command_registry.rs  commands.rs  handler.rs  keybindings.rs
src/model/: buffer.rs  event.rs  piece_tree.rs
src/primitives/: highlighter.rs  mod.rs  reference_highlighter.rs  visual_layout.rs
src/services/: async_bridge.rs  release_checker.rs
src/ui/: menu.rs  split_rendering.rs  status_bar.rs
src/view/: mod.rs  prompt.rs  reference_highlight_cache.rs  split.rs  viewport.rs
tests/: e2e_tests.rs  property_persistence_tests.rs  property_tests.rs
tests/common/: fake_lsp.rs  git_test_helper.rs  harness.rs  mod.rs
tests/e2e/: ansi_cursor.rs  auto_indent.rs  auto_revert.rs  basic.rs  buffer_lifecycle.rs  command_palette.rs  crlf_rendering.rs  emacs_actions.rs  file_explorer.rs  git.rs  gutter.rs  help.rs  lifecycle.rs  live_grep.rs  locale.rs  lsp.rs  margin.rs  markdown_compose.rs  menu_bar.rs  merge_conflict.rs  mod.rs  movement.rs  multibyte_characters.rs  multicursor.rs  plugin.rs  prompt.rs  prompt_editing.rs  rendering.rs  scroll_clearing.rs  scrolling.rs  search.rs  selection.rs  split_view.rs  split_view_expectations.rs  terminal.rs  terminal_close.rs  unicode_prompt_bugs.rs  vi_mode.rs  visual_regression.rs
types/: fresh.d.ts
(+79 files in other folders)
