[workspace]
resolver = "2"
members = [
    "crates/fresh-editor",
    "crates/fresh-core",
    "crates/fresh-parser-js",
    "crates/fresh-languages",
    "crates/fresh-plugin-runtime",
    "crates/fresh-plugin-api-macros",
]

[workspace.package]
version = "0.2.4"
authors = ["Noam Lewis"]
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/sinelaw/fresh"
homepage = "https://sinelaw.github.io/fresh/"
documentation = "https://docs.rs/fresh-editor"

[workspace.dependencies]
# Local crates
fresh-core = { version = "0.2.4", path = "crates/fresh-core" }
fresh-parser-js = { version = "0.2.4", path = "crates/fresh-parser-js" }
fresh-languages = { version = "0.2.4", path = "crates/fresh-languages" }
fresh-plugin-runtime = { version = "0.2.4", path = "crates/fresh-plugin-runtime" }
fresh-plugin-api-macros = { version = "0.2.4", path = "crates/fresh-plugin-api-macros" }

# External crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100", default-features = false }
tokio = { version = "1.49", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "sync", "time", "macros"] }
once_cell = "1.20"
tracing = "0.1"
rust-i18n = "3.1.5"
schemars = { version = "1.2", features = ["preserve_order"] }
rquickjs = { version = "0.11", features = ["bindgen", "futures", "macro"] }
rquickjs-serde = "0.4"
oxc_allocator = "0.112.0"
oxc_ast = "0.112.0"
oxc_parser = "0.112.0"
oxc_transformer = "0.112.0"
oxc_codegen = "0.112.0"
oxc_span = "0.112.0"
oxc_semantic = "0.112.0"
oxc_diagnostics = "0.112.0"
tree-sitter = "0.26.5"
tree-sitter-highlight = "0.26.3"
crossterm = "0.29"
lsp-types = "0.97"
ts-rs = { version = "11.1", features = ["serde_json"] }
# Add more as needed during refactor

[profile.release]
debug = 0
codegen-units = 4
lto = "off" # speed up the binary final build

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
