[package]
name = "fresh-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "fresh"
description = "A lightweight, fast terminal-based text editor with LSP support and TypeScript plugins"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["editor", "terminal", "tui", "text-editor", "lsp"]
categories = ["command-line-utilities", "text-editors"]

[[bin]]
name = "fresh"
path = "src/main.rs"
required-features = ["runtime"]

[[bin]]
name = "generate_schema"
path = "src/bin/generate_schema.rs"
required-features = ["dev-bins"]

[[bin]]
name = "event_debug"
path = "src/bin/event_debug.rs"
required-features = ["dev-bins", "runtime"]

[lib]
name = "fresh"
path = "src/lib.rs"

[features]
default = ["plugins", "runtime", "embed-plugins"]
plugins = ["dep:fresh-plugin-runtime", "dep:fresh-parser-js", "dep:fresh-plugin-api-macros", "dep:ts-rs"]
# Embed plugins into the binary as a fallback when no disk plugins are found
embed-plugins = ["plugins", "dep:include_dir", "dep:trash"]
# Feature for optional development binaries (generate_schema, event_debug)
# Includes ratatui for theme type definitions needed by schema generation
dev-bins = ["dep:ratatui"]
# Runtime feature includes all heavy dependencies needed for the actual editor
runtime = [
    "dep:crossterm",
    "dep:ratatui",
    "ratatui/crossterm",  # Enable ratatui's crossterm backend for native terminal
    "dep:chrono",
    "dep:clap",
    "dep:tracing-subscriber",
    "dep:fresh-languages",
    "dep:lsp-types",
    "dep:url",
    "dep:tokio",
    "dep:async-trait",
    "dep:lru",
    "dep:ignore",
    "dep:libc",
    "dep:libloading",
    "dep:nix",
    "dep:pulldown-cmark",
    "dep:sha2",
    "dep:arboard",
    "dep:syntect",
    # Use onig regex engine for runtime (faster than fancy-regex)
    "syntect/regex-onig",
    "syntect/parsing",
    "syntect/dump-load",
    "syntect/dump-create",
    "syntect/yaml-load",  # Needed for SyntaxDefinition::load_from_str
    "syntect/default-syntaxes",
    "syntect/default-themes",
    "dep:plist",  # For loading TextMate grammar files (JSON → plist conversion)
    "dep:ureq",
    "dep:alacritty_terminal",
    "dep:portable-pty",
    "dep:trash",
    "dep:open",

]
# Schema-only feature for minimal builds (just schema generation)
schema-only = []
# WASM browser build - shared editor core without native dependencies
# Enables the same pure Rust modules as runtime but without platform-specific deps
wasm = [
    "dep:ratatui",  # ratatui core is WASM-compatible (no crossterm backend)
    "dep:crossterm",  # crossterm event types are pure Rust data structures
    "dep:syntect",
    # Use fancy-regex instead of onig for WASM (pure Rust, no C dependencies)
    "syntect/regex-fancy",
    "syntect/parsing",
    "syntect/dump-load",
    "syntect/yaml-load",  # yaml-rust is pure Rust, WASM-compatible
    "syntect/default-syntaxes",
    "syntect/default-themes",
    "dep:plist",  # plist is pure Rust, WASM-compatible
]

[dependencies]
# Local crates
fresh-core.workspace = true
fresh-parser-js = { workspace = true, optional = true }
fresh-languages = { workspace = true, optional = true, features = ["all-languages"] }
fresh-plugin-runtime = { workspace = true, optional = true }

# Always required (for schema generation and runtime)
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
rust-i18n.workspace = true
once_cell.workspace = true

# Runtime dependencies (optional, enabled by "runtime" feature)
crossterm = { version = "0.29.0", features = ["osc52"], optional = true }
# ratatui with default-features=false is WASM-compatible (no crossterm backend)
# Runtime feature adds the crossterm backend for native terminal rendering
ratatui = { version = "0.30.0", default-features = false, features = ["std", "underline-color"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"], optional = true }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"], optional = true }
# tracing is always needed for logging throughout the codebase
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

lsp-types = { workspace = true, optional = true }
url = { version = "2.5", optional = true }
tokio = { version = "1.49", features = ["fs", "io-util", "process", "rt", "rt-multi-thread", "sync", "time", "macros"], optional = true }
async-trait = { version = "0.1", optional = true }
lru = { version = "0.16", optional = true }
ignore = { version = "0.4", default-features = false, optional = true }
# regex is always needed for model::buffer search functionality
regex = { version = "1.12" }
libc = { version = "0.2", optional = true }
libloading = { version = "0.9", optional = true }
nix = { version = "0.31", features = ["signal", "pthread", "resource", "poll", "fs"], optional = true }

# Plugin API proc macros for type-safe bindings
fresh-plugin-api-macros = { workspace = true, optional = true }
# TypeScript type generation from Rust structs
ts-rs = { version = "11.1", optional = true }

# anyhow is always needed for model error handling
anyhow = { workspace = true }
# base64 for remote protocol encoding
base64 = { version = "0.22" }
# thiserror for custom error types
thiserror = { version = "2.0" }
# dirs is always needed for path_utils home directory expansion
dirs = { version = "6.0" }
pulldown-cmark = { version = "0.13", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"], optional = true }
# syntect with default-features=false so we can choose regex engine per build target
# runtime uses onig (faster), wasm uses fancy-regex (pure Rust, WASM-compatible)
syntect = { version = "5.3", default-features = false, optional = true }
# plist for parsing/generating TextMate grammar files
plist = { version = "1.7", optional = true }
ureq = { version = "3.1.4", default-features = false, features = ["rustls"], optional = true }
# Unicode handling - always needed for primitives
unicode-width = { version = "0.2" }
unicode-segmentation = { version = "1.12" }

# Encoding support - detection and conversion for various text encodings
encoding_rs = "0.8"
chardetng = "0.1"
charset-normalizer-rs = "1.1"

# Terminal emulation (optional)
alacritty_terminal = { version = "0.25", optional = true }
portable-pty = { version = "0.9", optional = true }

# Embedded plugins support (optional)
include_dir = { version = "0.7", optional = true }
tempfile = { version = "3.24", optional = true }
trash = { version = "5.2.5", optional = true }
open = { version = "5", optional = true }

[dev-dependencies]
proptest = "1.9"
tempfile = "3.24.0"
insta = { version = "1.46", features = ["yaml"] }
vt100 = "0.16"  # Virtual terminal emulator for testing real ANSI output
ctor = "0.6.3"
tiny_http = "0.12"  # Lightweight HTTP server for testing release checker
unicode-segmentation = "1.12"  # For grapheme cluster testing

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[build-dependencies]
serde_json.workspace = true

[package.metadata.dist]
# Point dist at the changelog so GitHub Releases get populated
changelog = "../../CHANGELOG.md"

# Debian package configuration for cargo-deb
[package.metadata.deb]
maintainer = "Noam Lewis"
section = "editors"
priority = "optional"
depends = "$auto"
assets = [
    # Binary - path must start with "target/release/" for cargo-deb to auto-adjust for --target
    # CI creates symlink: crates/fresh-editor/target -> ../../target
    ["target/release/fresh", "usr/share/fresh-editor/", "755"],
    ["../../README.md", "usr/share/doc/fresh-editor/", "644"],
    ["plugins/*", "usr/share/fresh-editor/plugins/", "644"],
    ["plugins/lib/*", "usr/share/fresh-editor/plugins/lib/", "644"],
    ["plugins/examples/*", "usr/share/fresh-editor/plugins/examples/", "644"],
    ["themes/*", "usr/share/fresh-editor/themes/", "644"],
]
# Maintainer scripts to create/remove symlink at /usr/bin/fresh
maintainer-scripts = "debian/"
extended-description = """
Fresh is a lightweight, fast terminal-based text editor with LSP support
and TypeScript plugins. It provides syntax highlighting, code completion,
and other IDE-like features in a minimal terminal interface."""

# RPM package configuration for cargo-generate-rpm
[package.metadata.generate-rpm]
assets = [
    # Binary - CI creates symlink: crates/fresh-editor/target -> ../../target
    { source = "target/release/fresh", dest = "/usr/share/fresh-editor/fresh", mode = "755" },
    # Wrapper script in /usr/bin for PATH access
    { source = "scripts/fresh-wrapper.sh", dest = "/usr/bin/fresh", mode = "755" },
    { source = "../../README.md", dest = "/usr/share/doc/fresh-editor/README.md", mode = "644" },
    { source = "plugins/*.ts", dest = "/usr/share/fresh-editor/plugins/", mode = "644" },
    { source = "plugins/*.json", dest = "/usr/share/fresh-editor/plugins/", mode = "644" },
    { source = "plugins/*.md", dest = "/usr/share/fresh-editor/plugins/", mode = "644" },
    { source = "plugins/lib/*", dest = "/usr/share/fresh-editor/plugins/lib/", mode = "644" },
    { source = "plugins/examples/*", dest = "/usr/share/fresh-editor/plugins/examples/", mode = "644" },
    { source = "themes/*.json", dest = "/usr/share/fresh-editor/themes/", mode = "644" },
]
# posttrans runs after ALL transaction operations complete - needed because older versions
# (<=0.1.56) had a preuninstall script that removes /usr/bin/fresh, which deletes our wrapper
# during upgrades. This script restores it.
post_trans_script = """
if [ ! -e /usr/bin/fresh ]; then
    cat > /usr/bin/fresh << 'WRAPPER'
#!/bin/sh
exec /usr/share/fresh-editor/fresh "$@"
WRAPPER
    chmod 755 /usr/bin/fresh
fi
"""
